# DroneSimulation

./: .gitignore  AESTHETICS_INDEX.md  AESTHETIC_COMPARISON.md  AESTHETIC_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG_ONNX_FIX.md  CHANGELOG_PAN_CONTROL.md  CHANGES_MADE.md  CHANGES_SUMMARY.md  CHANGES_WINDOWS_FIX.md  COMPLETED_WORK_SUMMARY.md  COMPLETE_TECHNICAL_DOCUMENTATION.md  COMPLETION_DRONE_AESTHETICS.md  COMPLETION_SUMMARY_UI.md  CPP_IMPLEMENTATION_DETAILS.md  CSV_EXPORT_GUIDE.md  DESIGN_DECISIONS.md  DOCUMENTATION_INDEX.md  DRONE_AESTHETIC_IMPROVEMENTS.md  DRONE_BLACK_THEME_FIX.md  DRONE_COLORS_REFERENCE.md  DRONE_COLOR_COMPARISON.md  DRONE_MODEL_UPDATE_SUMMARY.md  DRONE_THEME_FIX.md  DRONE_VISIBILITY_FIX_SUMMARY.md  DRONE_VISUAL_SHOWCASE.md  DRONE_WHITE_THEME_UPDATE.md  DYNAMIC_TRAJECTORY_GUIDE.md  DYNAMIC_WAYPOINTS_GUIDE.md  DYNAMIC_WAYPOINTS_IMPLEMENTATION_SUMMARY.md  DYNAMIC_WAYPOINTS_QUICKSTART.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FEATURE_UPDATE.md  FILE_TREE.txt  FINAL_SUMMARY.md  FINAL_SUMMARY_AESTHETICS.md  FINDING_SETTINGS_GUIDE.md  FIX_COMPLETE.md  FIX_STATUS.txt  (+107 more)
cpp/: BUILD_INSTRUCTIONS_WINDOWS.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  QUICK_START_INTERACTIVE.md  README.md  README_CPP.md  README_INTERACTIVE_MODE.md  README_WINDOWS.md  VISUAL_USAGE_GUIDE.md  build_windows.bat  build_windows.ps1  drone_trajectory.cpp  drone_trajectory.h  example_waypoints.txt  main.cpp  test_interactive_simulation.sh
python/: check_onnx_setup.py  data_generator.py  export_dataset_to_csv.py  export_to_onnx.py  ml_model.py  quick_test.py  simulation.py  test_dynamic_waypoints.py  test_pan_control.py  test_trajectory_features.py  test_ui_improvements.py  train_model.py  trajectory_generator.py  trajectory_storage.py  trajectory_templates.py  utils.py
